2009-03-24  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/seahorse-prefs.c: Gracefully handle preferences window already
    being open.  Fixes bug #576519

2009-03-20  Stef Walter  <stef@memberwebs.com>

	* ssh/seahorse-ssh-operation.c: When a port wasn't specified 
	the umask for a new authorized_keys wasn't taking effect.
	Research by Andreas Moog. Fixes bug #574899
	
2009-03-16  Stef Walter  <stef@memberwebs.com>

	* pgp/seahorse-hkp-source.c: Fix crash when entering hkp:
	url manually. Fixes bug #575225

2009-03-16  Stef Walter  <stef@memberwebs.com>

	* configure.in: Bump version number

=== seahorse 2.26.0 ===

2009-03-14  Stef Walter  <stef@memberwebs.com>

	* NEWS:
	* README:
	* configure.in: Version 2.26.0

2009-03-05  Stef Walter  <stef@memberwebs.com>

	* gkr/seahorse-gkr-add-keyring.c: Fix cancel button in add keyring
	dialog. Fixes bug #574424

2009-03-04  Stef Walter  <stef@memberwebs.com>

	* src/seahorse-key-manager.c: Update GUI before showing window, to avoid
	GUI changes when selection is initialized. Fix bug #574079
	 
2009-03-02  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-util.c: Read out memory properly from GString.
	Fixes bug #551753
	
	* ssh/seahorse-ssh-key-data.c: Add some null checks. 
	
2009-03-02  Stef Walter  <stef@memberwebs.com>

	* src/seahorse-keyserver-sync.c: Allow multiple sync windows to open. 
	
2009-03-02  Stef Walter  <stef@memberwebs.com>

	* src/seahorse-key-manager.c: Fire selection changed after tab 
	switch actually happens. Fixes bug #553670
	
2009-03-02  Stef Walter  <stef@memberwebs.com>

	* src/seahorse-keyserver-search.c: Add null check. Fixes bug #502029

2009-03-02  Stef Walter  <stef@memberwebs.com>

	* egg/egg-secure-entry.c: Fix "gnome-keyring-ask needs to disable 
	input method in password" bug #561331 Patch by Takao Fujiwara

=== seahorse 2.25.92 ===

2009-03-02  Stef Walter  <stef@memberwebs.com>

	* NEWS:
	* README: Release version 2.25.92
