@@ -1,3 +1,8 @@
+2009-03-31  Adam Schreiber  <sadam@clemson.edu>
+
+    * pgp/seahorse-hkp-source.c:
+    * pgp/seahorse-pgp-uid.c: Fix parsing of uids.  Fixes bug #577362
+
 2009-03-24  Adam Schreiber  <sadam@clemson.edu>
 
     * libseahorse/seahorse-prefs.c: Gracefully handle preferences window already
